--- a/src/9_2_2_edit_asset_merge_asset_step_4.html
+++ b/src/9_2_2_edit_asset_merge_asset_step_4.html
@@ -102,7 +102,7 @@
                                 <div class="d-flex justifu-content-between align-items-center">                                      
                                         <input class="form-control" type="text" placeholder="" value="">
 
-                                    <button type="button" class="btn btn-dark waves-effect waves-light nowrap ml-20">
+                                    <button type="button" class="btn btn-sm btn-dark waves-effect waves-light nowrap ml-20">
                                         Load
                                     </button>
                                 </div>
@@ -110,7 +110,7 @@
 
                                     <!-- start buttons wrapper -->
                                     <div class="button-wrapper button-wrapper--end mt-3">
-                                        <button type="button" class="btn btn-outline-danger waves-effect waves-light">
+                                        <button type="button" class="btn btn-sm btn-outline-danger waves-effect waves-light">
                                             Back To Step 1
                                         </button>
                                     </div>
@@ -131,7 +131,7 @@
 
                         <!-- start buttons wrapper -->
                         <div class="button-wrapper button-wrapper--end" id="modalButtons">       
-                            <button type="button" class="btn btn-outline-danger waves-effect waves-light">Cancel merge</button>       
+                            <button type="button" class="btn btn-sm btn-outline-danger waves-effect waves-light">Cancel merge</button>       
                         </div>
                         <!-- end buttons wrapper -->
 
