--- a/src/4_0_repear.html
+++ b/src/4_0_repear.html
@@ -70,9 +70,9 @@
 
                         <div class="button-wrapper button-wrapper--end">
 
-                            <button type="button" class="btn btn-dark waves-effect waves-light">Continue</button>
+                            <button type="button" class="btn btn-sm btn-dark waves-effect waves-light">Continue</button>
 
-                            <button type="button" class="btn btn-outline-danger waves-effect waves-light">Cancel</button>
+                            <button type="button" class="btn btn-sm btn-outline-danger waves-effect waves-light">Cancel</button>
 
                         </div>
 
@@ -184,100 +184,3 @@
     </div>
 </div>
 <!-- end main content-->
-
-
-<!-- sidemenu script from skote -->
-<script src="/dashboard/shared/assets/libs/simplebar/simplebar.min.js"></script>
-
-
-<!-- file upload scripts from skote -->
-<script src="/dashboard/shared/assets/js/pages/form-file-upload.init.js"></script>
-<script src="/dashboard/shared/assets/js/pages/form-file-upload.init.js"></script>
-
-<!-- date input scripts from skote -->
-<script src="/dashboard/shared/assets/libs/bootstrap-datepicker/js/bootstrap-datepicker.min.js"></script>
-
-<!-- select input scripts for Select2 -->
-<script src="/dashboard/shared/assets/libs/select2/js/select2.min.js"></script>
-<script src="/dashboard/shared/assets/js/pages/form-advanced.init.js"></script>
-
-<!-- javascript to open and close modal -->
-<script>
-    // Get the modal
-    let modal = document.getElementById("filterModal");
-
-document.addEventListener('click', function(event) {
-    if (event.target.classList.contains('modal')) {
-        modal.style.display = "none";
-    }
-});
-
-    // Get the button that opens the modal
-    let btn = document.getElementById("myBtn");
-
-    // Get the <span> element that closes the modal
-    let span = document.getElementsByClassName("close")[0];
-
-    // When the user clicks the button, open the modal 
-    btn.onclick = function () {
-        modal.style.display = "block";
-    }
-
-    // When the user clicks on <span> (x), close the modal
-    span.onclick = function () {
-        modal.style.display = "none";
-    }
-
-    // When the user clicks anywhere outside of the modal, close it
-    window.onclick = function (event) {
-        if (event.target == modal) {
-            modal.style.display = "none";
-        }
-    }
-
-    function toggleActive(button) {
-    // Удаляем класс 'active' у всех кнопок с классом '.btn'
-    var buttons = document.querySelectorAll('.btn-group .btn');
-    buttons.forEach(function(btn) {
-        btn.classList.remove('active');
-    });
-
-    // Добавляем класс 'active' только к кнопке, по которой был клик
-    button.classList.add('active');
-}
-</script>
-
-<!-- javscript for Select2 -->
-<script>
-    $('#asset-type').select2({
-        placeholder: "Choose",
-    });
-
-    //allows all dropdown options not in #asset-type to have a border-top
-    $('.regular-select').select2({
-        placeholder: '',
-        minimumResultsForSearch: Infinity,
-        dropdownCssClass: "regular-dropdown"
-    });
-
-    // show additional inputs based on *Length select value
-    $(document).ready(function () {
-        // hide the sub-panes
-        $('.length-units').hide();
-
-        // When our select2 changes...
-        $('#length').change(function () {
-            // ... we can get all the selected options
-            let selected = $(this).select2('data');
-
-            // Hide all the panes again
-            $('.length-units').hide();
-            // Go through the list of options
-            selected.forEach(function (option) {
-                // and show the one with this id
-                $("#" + option.id).show()
-                $("#length-icon").hide();
-            })
-        });
-    });
-</script>
